# HexRacer

./: .gitignore  AUTHOR  BUGS  CMakeLists.txt  HRMapEditor.sln  HRMapEditor.vcproj  PLAN  README.txt  THANKS  TODO  TODO3  TODO4  TODO5  TODO9  TaskList.txt  config.txt  editor  guiconfig.txt  ingameabout.txt  maps.txt  networking.txt  newclass.pl  project  project.qrc  project.sln  project.vcproj  project2.sln  project2.vcproj  sdl  server  server.vcproj  shaders.txt  test.frag  test.vert  updateproject.pl  widgets.txt
src/: CMakeLists.txt  config.h  targets.txt
src/ai/: AIManager.cpp  AIManager.h  DirectionalDriver.cpp  DirectionalDriver.h  Driver.cpp  Driver.h  StraightDriver.cpp  StraightDriver.h  WeightedDriver.cpp  WeightedDriver.h
src/bonus/: BonusMessage.cpp  BonusMessage.h  BonusMessageQueue.cpp  BonusMessageQueue.h  GlobalBonusManager.cpp  GlobalBonusManager.h  MyBonusManager.cpp  MyBonusManager.h  PlayerBonuses.cpp  PlayerBonuses.h
src/connection/: AbstractTCPSocket.cpp  AbstractTCPSocket.h  ClientManager.cpp  ClientManager.h  ConstructedTCPSocket.cpp  ConstructedTCPSocket.h  ReferencingTCPSocket.cpp  ReferencingTCPSocket.h  ServerManager.cpp  ServerManager.h  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h  TCPServerSocket.cpp  TCPServerSocket.h  TCPSocket.cpp  TCPSocket.h
src/event/: BasicWorldConstructed.cpp  BasicWorldConstructed.h  BonusEvent.cpp  BonusEvent.h  CameraMovement.cpp  CameraMovement.h  ChangeOfIntention.cpp  ChangeOfIntention.h  ChangeScreenMode.cpp  ChangeScreenMode.h  CreateObject.cpp  CreateObject.h  DestroyObject.cpp  DestroyObject.h  DoDisconnect.cpp  DoDisconnect.h  Enabler.cpp  Enabler.h  EntireWorld.cpp  EntireWorld.h  EventBase.cpp  EventBase.h  EventSerializer.cpp  EventSerializer.h  EventSystem.cpp  EventSystem.h  EventType.cpp  EventType.h  GameStageChanged.cpp  GameStageChanged.h  GeneralWorldSetupEvent.cpp  GeneralWorldSetupEvent.h  JoinGame.cpp  JoinGame.h  MethodObserver.cpp  MethodObserver.h  ModifyCamera.cpp  ModifyCamera.h  MultiObserver.cpp  MultiObserver.h  (+60 more)
src/gui/: AboutProxy.cpp  AboutProxy.h  ConnectProxy.cpp  ConnectProxy.h  FinishedProxy.cpp  FinishedProxy.h  GUIConstruction.cpp  GUIConstruction.h  GUIObservers.cpp  GUIObservers.h  GUISystem.cpp  GUISystem.h  HostProxy.cpp  HostProxy.h  LoadingProxy.cpp  LoadingProxy.h  LobbyProxy.cpp  LobbyProxy.h  MainMenuProxy.cpp  MainMenuProxy.h  MapList.cpp  MapList.h  PauseMenuProxy.cpp  PauseMenuProxy.h  RunningProxy.cpp  RunningProxy.h  SelectMapProxy.cpp  SelectMapProxy.h  SettingsProxy.cpp  SettingsProxy.h  SinglePlayerProxy.cpp  SinglePlayerProxy.h
src/history/: Historian.cpp  Historian.h  PingTimeMeasurer.cpp  PingTimeMeasurer.h
src/hud/: BonusMessages.cpp  BonusMessages.h  HUDRenderer.cpp  HUDRenderer.h  LapProgressBar.cpp  LapProgressBar.h  Minimap.cpp  Minimap.h  PlacingList.cpp  PlacingList.h  PlayerPlacingText.cpp  PlayerPlacingText.h  RaceClock.cpp  RaceClock.h  Speedometer.cpp  Speedometer.h
src/input/: GlobalInputManager.cpp  GlobalInputManager.h  InputAction.cpp  InputAction.h  InputAxisAction.cpp  InputAxisAction.h  InputButtonAction.cpp  InputButtonAction.h  InputEventTypes.h  InputKeyAction.cpp  InputKeyAction.h  InputMapper.cpp  InputMapper.h  InputSnapshot.cpp  InputSnapshot.h  JoystickManager.cpp  JoystickManager.h
src/log/: AbstractStream.cpp  AbstractStream.h  AliasStream.cpp  AliasStream.h  FileStream.cpp  FileStream.h  LogOpener.cpp  LogOpener.h  Logger.cpp  Logger.h  Message.cpp  Message.h  MessageType.cpp  MessageType.h  Stream.cpp  Stream.h  Subsystem.cpp  Subsystem.h  TypeRegistry.cpp  TypeRegistry.h  VerbosityLevel.cpp  VerbosityLevel.h
src/map/: HRMap.cpp  HRMap.h  HRMapObjects.cpp  HRMapObjects.h  MapLoader.cpp  MapLoader.h  MapOptions.cpp  MapOptions.h  MapSettings.cpp  MapSettings.h  MeshInstance.cpp  MeshInstance.h  Minimap.cpp  Minimap.h  PathManager.cpp  PathManager.h  PathNode.cpp  PathNode.h  PathTracker.cpp  PathTracker.h  PathingUpdater.cpp  PathingUpdater.h  PlayerTimes.cpp  PlayerTimes.h  RaceManager.cpp  RaceManager.h  RaceResults.cpp  RaceResults.h  Teams.cpp  Teams.h  WarpDetector.cpp  WarpDetector.h
src/mapeditor/: CubeMapDialog.cpp  CubeMapDialog.h  FinishPlaneObject.cpp  FinishPlaneObject.h  LightObject.cpp  LightObject.h  MapEditorConstants.h  MapEditorProgressBar.cpp  MapEditorProgressBar.h  MapEditorWidget.cpp  MapEditorWidget.h  MapObject.cpp  MapObject.h  MapOptionsDialog.cpp  MapOptionsDialog.h  MeshInstanceObject.cpp  MeshInstanceObject.h  MouseSelectorWidget.cpp  MouseSelectorWidget.h  PathNodeObject.cpp  PathNodeObject.h  ScaleAllDialog.cpp  ScaleAllDialog.h  StartPointObject.cpp  StartPointObject.h  TranslateAllDialog.cpp  TranslateAllDialog.h  editormain.cpp  hrmemainwindow.cpp  hrmemainwindow.h
src/math/: BSPTree.cpp  BSPTree.h  BSPTree3D.cpp  BSPTree3D.h  BoundingBox2D.cpp  BoundingBox2D.h  BoundingBox3D.cpp  BoundingBox3D.h  BoundingCircle.cpp  BoundingCircle.h  BoundingConvexHull3D.cpp  BoundingConvexHull3D.h  BoundingObject.cpp  BoundingObject.h  BoundingObject2D.cpp  BoundingObject2D.h  BoundingObject3D.cpp  BoundingObject3D.h  BoundingPlane3D.cpp  BoundingPlane3D.h  BoundingSphere.cpp  BoundingSphere.h  BoundingTriangle2D.cpp  BoundingTriangle2D.h  Cullable.cpp  Cullable.h  Geometry.cpp  Geometry.h  HexGrid.cpp  HexGrid.h  HexHeightMap.cpp  HexHeightMap.h  Matrix.cpp  Matrix.h  Object2D.cpp  Object2D.h  Object3D.cpp  Object3D.h  ObjectSpatial.cpp  ObjectSpatial.h  (+24 more)
src/mesh/: MeshGroup.cpp  MeshGroup.h  MeshLoader.cpp  MeshLoader.h  MeshTriangle.cpp  MeshTriangle.h  MeshTriangleFan.cpp  MeshTriangleFan.h  MeshVertex.cpp  MeshVertex.h  SubMesh.cpp  SubMesh.h  TransformedMesh.cpp  TransformedMesh.h  model_obj.cpp  model_obj.h
src/misc/: DeleteFunctor.cpp  DeleteFunctor.h  DirectoryFunctions.cpp  DirectoryFunctions.h  ProgressLogger.cpp  ProgressLogger.h  ProgressTracker.h  Singleton.cpp  Singleton.h  Sleeper.cpp  Sleeper.h  StdListFunctions.h  StdVectorFunctions.h  StreamAsString.cpp  StreamAsString.h
src/network/: EventPacket.cpp  EventPacket.h  HandshakePacket.cpp  HandshakePacket.h  (+14 more)
(+399 files in other folders)
